--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "pkginfo": "0.2.x",
-    "passport-oauth": "0.1.x",
+    "passport-oauth": "1.x.x",
     "oauth": "0.9.x",
     "jwt-simple": "0.1.x"
   },
